Fixed z-index issues bentween canvas and text

--- a/src/components/IntroText/IntroText.scss
+++ b/src/components/IntroText/IntroText.scss
@@ -1,6 +1,4 @@
 .intro-text {
-    //position: relative;
-    z-index: 1000;
 
     @media (min-width: 992px) {
         flex: 1;
